crates/ridge-parser/tests/fixtures/errors/p021_inline_record_in_fn_param.ridge
-- expect: P021
-- Trigger: inline record type with a missing `:` between field name and type.
-- Well-formed inline record types in fn params are now supported; this tests
-- the malformed-type diagnostic for a bad field syntax.
pub fn id (x: { id Int }) -> Int = 0
